<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/sad_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sad_songs"
            android:onClick="generateSadPLaylist"/>

        <Button
            android:id="@+id/funny_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funny_songs"
            android:onClick="generateFunnyPLaylist"/>

        <Button
            android:id="@+id/music_for_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/songs_for_sleep"
            android:onClick="generatePLaylistForSleep"/>

        <Button
            android:id="@+id/random_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_playlist"
            android:onClick="generateRandomPLaylist"/>

        <Button
            android:id="@+id/generate_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_playlist_by_current_mood"
            android:onClick="generateMoodPLaylist"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>